--- a/doti3/w3m/bookmark.html
+++ b/doti3/w3m/bookmark.html
@@ -6,5 +6,10 @@
 <li><a href="https://github.com/">GitHub</a>
 <!--End of section (do not delete this comment)-->
 </ul>
+<h2>Communication</h2>
+<ul>
+<li><a href="https://wimap.feld.cvut.cz/horde4/login.php">CVUT mail</a>
+<!--End of section (do not delete this comment)-->
+</ul>
 </body>
 </html>
